* introduce new script pa_application-edit; with different filters
* pa_device-edit | extend with devicetype=manageddevice

BUGFIX:

GENERAL:


2.0.6 (202107212)
UTILS:
* pa_zone-edit | introduce filter=(logprof is.set) and (logprof is XYZ) | actions=exportToExcel
* pa_device-edit | introduce actions=template-add:TEMPLATENAME for devicetype=templatestack | introduce filter=(name eq DEVICENAME)
* introduce new script pan_config-size - to display the specific parts of the config which used the most config size
* introduce new script pa_securityprofilegroup-edit

BUGFIX:
* pa_diff | bugfix to find also changes within existing config like adding rule to/from/source/destination member
* pa_panos-xml-issue-detector | extend to remove duplicate members from security-Rule source/destionation/application - remove duplicate application-group members
* class AddressGroup | bugfix to read filter of dynamic addressgroup correct
* class RuleStore/SecurityRule | improve config reading for PAN-OS >= 10.0 - hip-profiles is now source-hip and additional destination-hip

GENERAL:
* predefined.xml update to version 8422-6787


2.0.5 (20210627)
UTILS:
* pa_rule-edit introduce 'filter=(description.length <>=! NUMBER)'
* pa_rule-edit actions=exportToExcel - introduce column 'log_profile_name' to display the log forwarding profile name
* pa_address-edit introduce new 'filter=(value has.wrong.network)' - display objects where IP-value does not fit to calculated IP-network
* class UTIL | introduce $location, $sub for single location cli argument, to be used in example template
* pa_rule-edit introduce 'filter=(rule is.enabled)'
* device-edit.php | introduction BETA script
* class DH | extend method findXPath to accept array with multiple xPath strings
* panos-xml-issue-detector | extend to support FAWKES config syntax
* pa_device-edit - new util script to display VSYS/DeviceGroup/Template/TemplateStack/Container/DeviceCloud informaiton