@@ -5,6 +5,7 @@ UTILS:
 * pa_securityprofilegroup-edit | new actions=securityProfile-Set and securityProfile-Remove - new filters: * secprof: as-profile.is, as-profile.is.set, av-profile.is, av-profile.is.set, data-profile.is, data-profile.is.set, file-profile.is, file-profile.is.set, url-profile.is, url-profile.is.set, vuln-profile.is, vuln-profile.is.set, wf-profile.is, wf-profile.is.set
 * introduce new script pa_application-edit; with different filters
 * pa_device-edit | extend with devicetype=manageddevice
+* pa_securityprofilegroup-edit | introduce actions=exporttoexcel:FILE.HTML
 
 BUGFIX:
 
